# scrycall

./: README.md  pyproject.toml  requirements.txt  scrycall_app.py
scrycall/: cache.py  cli.py  data.py  output.py  scry_args.py  scry_data.py  scry_output.py
source/: scry_output.py
tests/: test_cli_query.py
